# cleaner_robot

./: CMakeLists.txt  README.md
cmake/: FetchDependencies.cmake
data/: short.json  short_2.json
include/cleaning/: cleaning_area.hpp
include/config/: constants.hpp
include/geometry/: curvature.hpp  path_metrics.hpp  transforms.hpp
include/io/: json_loader.hpp
include/visualization/: viewer.hpp
src/: cleaning_area.cpp  curvature.cpp  json_loader.cpp  main.cpp  path_metrics.cpp  transforms.cpp  viewer.cpp
tests/: CMakeLists.txt  test_cleaning_area.cpp  test_curvature.cpp  test_json.cpp  test_main.cpp  test_path_length.cpp
